tools: refactor code, use new jdk features, fix sonar issues